<resources>
    <string name="app_name">Eisedo</string>
    <string name="create_one"> Don\'t have a account? <font color='#36A5DD'> Create One! </font></string>
    <string name="e_mail">E Mail</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="forget_password">Forget Password?</string>
    <string name="logo">Logo</string>
    <string name="login">Login</string>
    <string name="setting">Settings</string>
    <string name="search">Search</string>
    <string name="inbox">Inbox</string>
    <string name="add_task">+ Add Task</string>
    <string name="add_note">Add Note</string>
    <string name="add_a_task">+ Add a Task</string>
    <string name="sort">Sort</string>
    <string name="projects">Projects</string>
    <string name="type" translatable="false">type</string>
    <string name="lists">Lists</string>
    <string name="starred">Starred</string>
    <string name="overdue">Overdue</string>
    <string name="delegated">Delegated</string>
    <string name="completed">Completed</string>
    <string name="trash">Trash</string>
    <string name="add_edit_task">AddEditTask</string>
    <string name="enter_credentials">Enter Credentials</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_user_name">Enter User Name</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="name">Name</string>
    <string name="location">Location</string>
    <string name="time_zone">Time Zone</string>
    <string name="language">Language</string>
    <string name="change_password">Change Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="new_task">New Task</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="my_details">My Details</string>
    <string name="matrix">Matrix</string>
    <string name="notification">Notifications</string>
    <string name="subscription">Subscription</string>
    <string name="help">Help</string>
    <string name="terms_conditions">Terms &amp; Conditions</string>
    <string name="task_title">Task Title</string>
    <string name="due_date">Due Date</string>
    <string name="repeat">Repeat</string>
    <string name="reminder">Reminder</string>
    <string name="add_folder">Add Folder</string>
    <string name="folder">Folder</string>
    <string name="do_first">Do First</string>
    <string name="do_later">Do Later</string>
    <string name="delegate">Delegate</string>
    <string name="eliminate">Eliminate</string>
    <string name="do_first_message">Well done - you\'re are up-to-date here!</string>
    <string name="do_later_message">Good job - you\'re all caught up here!</string>
    <string name="delegate_message">Awesome! - you have no tasks to delegate</string>
    <string name="eliminate_message">Great work - you\'ve eliminated all time-wasting activities!</string>
    <string name="channel_name">Channel Name</string>
    <string name="channel_description">Channel Description</string>
    <string name="sign_out">Sign Out</string>
    <string name="urgency_window">Urgency Window</string>
    <string name="urgency_message">Tasks due with in the Urgency Window will be considered urgent</string>
    <string name="matrix_headings">Matrix Headings</string>
    <string name="matrix_heading_message">Rename the matrix the way you like it</string>
    <string name="imp_urgent">Important and Urgent</string>
    <string name="imp_not_urgent">Important but not Urgent</string>
    <string name="not_imp_urgent">Urgent but not Important</string>
    <string name="not_imp_not_urgent">Not Urgent and Not Important</string>
    <string name="days">Days</string>
    <string name="email_notification">Email Notifications</string>
    <string name="push_notification">Push Notifications</string>
    <string name="reminders">Reminders</string>
    <string name="news_updates">News Updates</string>
    <string name="empty_trash">Empty Trash</string>
    <string name="dismiss">Dismiss</string>
    <string name="snooze">Snooze</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="item_selection">Item Selection</string>
    <string name="image_content">Image Content</string>
    <string name="priority">Priority</string>
    <string name="progress">Progress</string>
    <string name="alpha_order">A to Z</string>
    <string name="personal_msg">Does this task help you to achieve your personal or professional goals?</string>
    <string name="delegate_to">Delegate To ..</string>
    <string name="notify_by_email">Notify by email?</string>
    <string name="delegate_email">Delegate Email</string>
    <string name="message">Message</string>
    <string name="project_name">Project name</string>
    <string name="delete_project">Delete Project</string>
    <string name="folder_name">Folder Name</string>
    <string name="delete_folder">Delete Folder</string>
    <string name="check_list_name">Check List Name</string>
    <string name="delete_list">Delete List</string>
    <string name="no_search_items_found">No Search Items Found</string>
    <string name="create_list">+ Create List</string>
    <string name="create_lists">Create List</string>
    <string name="search_text">Search Text</string>
    <string name="done">Done</string>
    <string name="save_to_folder">Save To Folder</string>

</resources>