<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    
    <data>
        <variable
            name="delegate"
            type="com.eisedo.eisedo.data.local.entities.Delegate"/>
        <variable
            name="view"
            type="android.view.View"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:clickable="true">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:visibility="@{delegate.notify ? view.VISIBLE : view.GONE}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cb_notify_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tie_delegate_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/e_mail"
                android:text="@={delegate.email}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <EditText
            android:id="@+id/et_delegate_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:padding="10dp"
            android:paddingBottom="40dp"
            android:hint="@string/delegate_to"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:text="@={delegate.delegate_name}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tb_delegate"
            tools:targetApi="o" />

        <CheckBox
            android:checked="@{delegate.notify}"
            android:id="@+id/cb_notify_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/notify_by_email"
            android:textColor="@color/blue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_delegate_name" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:visibility="@{delegate.notify ? view.VISIBLE : view.GONE}"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:id="@+id/til_message"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout13">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tie_delegate_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/message"
                android:text="@={delegate.message}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tb_delegate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:navigationIcon="?attr/homeAsUpIndicator"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>